refactor: minor improvements